# ising-model

./: Dockerfile  LICENSE  README.md  ising_helpers.c  ising_helpers.pyx  pyproject.toml  requirements.txt  setup.py
monte-carlo/: ising_helpers.pyx  no-cy-sim.py  simulation.py
