[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "Monte Carlo Simulation using 2D Ising Model"
authors = ["Trevor Senaha <tjsenaha@gmail.com>"]
readme = "README.md"
packages = [{include = "monte-carlo"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"